fixed align

--- a/css/paths_css.css
+++ b/css/paths_css.css
@@ -41,7 +41,7 @@ header{
   color: #EDE1DA;
   position: absolute;
   right: 30px;
-  top: 12.5px;
+  top: 10.5px;
   margin: auto 0 ;
   font-family: 'Exo 2';
   font-size: 18px;
